# vocalizr

./: .apko.yaml  .deepsource.toml  .dockerignore  .gitattributes  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile old  README.md  app.py  compose.yaml  compose.yml  docker-bake.hcl  en.txt  melange.yaml  pycrucible.toml  pylock.toml  pyproject.toml  requirements.txt
.flox/: env.json
.flox/env/: manifest.toml
.github/: dependabot.yaml  dependabot.yml  hadolint.yml  mergify.yml  renovate.json  stepci.yaml  stepci.yml
.github/actions/uv/: action.yml
.github/workflows/: .docker.yaml  .lint.yaml  api_test.yaml  api_test.yml  build.yaml  ci_tools.yaml  code_analysis.yaml  code_analysis.yml  code_quality.yaml  detekt.yml  docker.yaml  docker.yml  github.yaml  hf.yml  huggingface.yaml  huggingface.yml  pylint.yaml  pylint.yml  pypi.yaml  pypi.yml  pyright.yaml  pyright.yml  release.yaml  requirements.yml  ruff.yaml  ruff.yml  snyk-security.yml  spelling.yaml  spelling.yml  test.yaml  trunk_upgrade.yaml  version.yaml
.sonarlint/: connectedMode.json
.trunk/: trunk.yaml
.trunk/configs/: .hadolint.yaml  .markdownlint.yaml  .yamlfmt.yaml  .yamllint.yaml  ruff.toml
assets/: index.html
chatacter/: model.py  settings.py
docs/: API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  EXAMPLES.md  INSTALLATION.md  LICENSE.md  TROUBLESHOOTING.md  USAGE.md  VOICES.md
src/: main.rs  model.rs
src/vocalizr/: __init__.py  __main__.py  gui.py  model.py
src/vocalizr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vocalizr/app/: builder.py  logger.py  settings.py
src/voice_generator/: __init__.py  __main__.py  gui.py  model.py
tests/: test_app.py  test_pyproject_toml.py  workflow.yml
