[project]
name = "vocalizr"
version = "0.0.1"
description = "Voice Generator part of the Chatacter Backend"
readme = "README.md"
requires-python = ">=3.12, <3.14"
authors = [
  { name = "Mohamed Hisham Abdelzaher", email = "mohamed.hisham.abdelzaher@gmail.com" },
]
dependencies = [
  "gradio[mcp]>=5.38.0",
  "kokoro>=0.9.4",
  "pip>=25.1.1",
  "pyfiglet>=1.0.4",
  "soundfile>=0.13.1",
]

[project.urls]
Issues = "https://github.com/AlphaSphereDotAI/vocalizr/issues"
Repository = "https://github.com/AlphaSphereDotAI/vocalizr.git"

[project.scripts]
vocalizr = "vocalizr.__main__:main"

[dependency-groups]
dev = ["ruff>=0.11.12", "ty>=0.0.1a10"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
extend = ".trunk/configs/ruff.toml"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
