[project]
name = "vocalizr"
version = "0.0.1"
description = "Voice Generator part of the Chatacter Backend"
readme = "README.md"
authors = [
  { name = "Mohamed Hisham Abdelzaher", email = "mohamed.hisham.abdelzaher@gmail.com" },
]
requires-python = ">=3.10, <3.14"
keywords = ["audio", "kokoro", "voice"]
dependencies = [
  "gradio[mcp]>=5.38.0",
  "kokoro>=0.9.4",
  "pip>=25.1.1",
  "soundfile>=0.13.1",
]
classifiers = [
  'Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.4',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build"]

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/AlphaSphereDotAI/vocalizr.git"
Issues = "https://github.com/AlphaSphereDotAI/vocalizr/issues"
Twitter = "https://x.com/AlphaSphereAI"

[project.scripts]
vocalizr = "vocalizr.__main__:main"

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
explicit = true
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"

[dependency-groups]
dev = [
  "gradio-client>=1.12.1",
  "pytest>=8.3",
  "pytest-emoji>=0.2.0",
  "pytest-md>=0.2.0",
  "pytest-mergify>=2025.8.20.1",
  "uv-build>=0.8.14",
  "ruff>=0.13.1",
  "ty>=0.0.1a20",
]

[tool.ruff]
extend = ".trunk/configs/ruff.toml"
